--- a/thumbnail/index.html
+++ b/thumbnail/index.html
@@ -5,6 +5,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5 target">
+      </div>
+    </div>
+  </div>
 </body>
 
 <script type="text/jsx">
@@ -17,15 +23,33 @@
     }
   });
 
+  var Thumbnail = React.createClass({
+    render: function() {
+      return <div className="thumbnail">
+        <img src={this.props.imageUrl} />
+        <div className="caption">
+          <h3>{this.props.header}</h3>
+          <p>{this.props.description}</p>
+          <p>
+            <Badge title={this.props.title} number={this.props.number} />
+          </p>
+        </div>
+      </div>
+    }
+  });
+
   var options = {
-    title: 'Sent',
-    number: 12
+    title: 'See Tutorials',
+    number: 89,
+    header: 'Learn React',
+    description: 'React is a fantastic new library for making fast, dynamic pages. React is a fantastic new library for making fast, dynamic pages.',
+    imageUrl: 'http://formatjs.io/img/react.svg'
   };
 
   // React, please render this class
-  var element = React.createElement(Badge, options);
+  var element = React.createElement(Thumbnail, options);
 
   // React, after rendering, please place it in my body tag
   // React.render(element tag, where the element needs to be placed)
-  React.render(element, document.body);
+  React.render(element, document.querySelector('.target'));
 </script>
