--- a/thumbnail-gulp/index.html
+++ b/thumbnail-gulp/index.html
@@ -1,14 +1,10 @@
 <head>
   <script src="https://fb.me/react-0.13.0.js"></script>
-  <script src="application.js"></script>
   <!-- Latest compiled and minified BS CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-sm-5 target">
-      </div>
-    </div>
   </div>
+  <script src="main.js"></script>
 </body>
