--- a/dropdown/index.html
+++ b/dropdown/index.html
@@ -2,6 +2,11 @@
   <script src="https://fb.me/react-0.13.0.js"></script>
   <!-- Latest compiled and minified BS CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+  <style type="text/css">
+    .btn .caret {
+      margin-left: 5px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
